--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "find-your-doctor-backend",
   "version": "1.0.0",
+   "engines": {
+    "node": "16.14.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
